# pyro-api

./: .Rhistory  .buildinfo  .env.example  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pyre_configuration  CONTRIBUTING.md  Dockerfile  Dockerfile_bis  Makefile  Procfile  README.md  changelog.html  client.html  docker-compose-dev.yml  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  docker-entrypoint.sh  genindex.html  index.html  installing.html  mypy.ini  nginx.conf  objects.inv  py-modindex.html  pyproject.toml  pytype.cfg  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py
.doctrees/: changelog.doctree  client.doctree  environment.pickle  index.doctree  installing.doctree
.github/: dependabot.yml  labeler.yml  validate_deps.py  validate_headers.py  verify_deps_sync.py  verify_labels.py
.github/workflows/: backend.yml  build-push-image  build-push-image.yml  builds.yml  client-doc-deploy.yaml  client-main.yml  client-upload.yaml  client.yml  doc-deploy.yaml  docker-publish.yaml  docs.yml  main.yml  pr-labels.yml  publish.yml  pull_requests.yml  push.yml  release.yaml  release.yml  requirements.yaml  scripts.yml  style.yml  tests.yml
.pytype/: .ninja_log  build.ninja
.pytype/imports/: _pytest.__init__.imports  _pytest._code.__init__.imports  _pytest._code.code.imports  _pytest._io.TerminalWriter.imports  _pytest._io.__init__.imports  _pytest.assertion.__init__.imports  _pytest.assertion.rewrite.imports  _pytest.assertion.truncate.imports  _pytest.cacheprovider.imports  _pytest.capture.imports  _pytest.compat.imports  _pytest.compat.imports-1  _pytest.config.__init__.imports  _pytest.config.argparsing.imports  _pytest.config.findpaths.imports  _pytest.debugging.imports  _pytest.debugging.imports-1  _pytest.deprecated.imports  _pytest.fixtures.imports  _pytest.freeze_support.imports  _pytest.helpconfig.imports  _pytest.hookspec.imports  _pytest.main.imports  _pytest.mark.__init__.imports  _pytest.mark.structures.imports  _pytest.nodes.imports  _pytest.outcomes.imports  _pytest.pathlib.imports  _pytest.python.imports  _pytest.python_api.imports  _pytest.recwarn.imports  _pytest.reports.imports  _pytest.runner.imports  _pytest.terminal.imports  _pytest.warning_types.imports  _pytest.warnings.imports  attr.__init__.imports  attr._make.imports  attr._next_gen.imports  attr._version_info.imports  (+320 more)
.pytype/pyi/: alerts.pyi  config.pyi  conftest.pyi  crud.pyi  db.pyi  devices.pyi  events.pyi  iniconfig.pyi  installations.pyi  login.pyi  main.pyi  media.pyi  pyparsing.pyi  routing.pyi  security.pyi  setup.pyi  six.pyi  test_accesses.pyi  test_alerts.pyi  test_devices.pyi  test_events.pyi  test_installations.pyi  test_login.pyi  test_media.pyi  test_sites.pyi  test_users.pyi  typing_extensions.pyi  users.pyi
.pytype/pyi/_pytest/: __init__.pyi  _argcomplete.pyi  _version.pyi  compat.pyi-1  deprecated.pyi  freeze_support.pyi  outcomes.pyi  pathlib.pyi  pathlib.pyi-1  python_api.pyi  store.pyi  timing.pyi  warning_types.pyi
.pytype/pyi/attr/: __init__.pyi  _compat.pyi  _config.pyi  _funcs.pyi  _make.pyi  _next_gen.pyi  _version_info.pyi  converters.pyi  exceptions.pyi  filters.pyi  setters.pyi  validators.pyi
.pytype/pyi/bcrypt/: __about__.pyi  __init__.pyi
.pytype/pyi/certifi/: __init__.pyi  core.pyi
.pytype/pyi/chardet/: __init__.pyi  big5freq.pyi  big5prober.pyi  chardistribution.pyi  charsetgroupprober.pyi  charsetprober.pyi  codingstatemachine.pyi  compat.pyi  cp949prober.pyi  enums.pyi  escprober.pyi  escsm.pyi  eucjpprober.pyi  euckrfreq.pyi  euckrprober.pyi  euctwfreq.pyi  euctwprober.pyi  gb2312freq.pyi  gb2312prober.pyi  hebrewprober.pyi  jisfreq.pyi  jpcntx.pyi  langbulgarianmodel.pyi  langcyrillicmodel.pyi  langgreekmodel.pyi  langhebrewmodel.pyi  langthaimodel.pyi  langturkishmodel.pyi  latin1prober.pyi  mbcharsetprober.pyi  mbcsgroupprober.pyi  mbcssm.pyi  sbcharsetprober.pyi  sbcsgroupprober.pyi  sjisprober.pyi  universaldetector.pyi  utf8prober.pyi  version.pyi
.pytype/pyi/click/: __init__.pyi  __init__.pyi-1  _bashcomplete.pyi  _compat.pyi  _termui_impl.pyi  _termui_impl.pyi-1  _textwrap.pyi  _unicodefun.pyi  _winconsole.pyi  _winconsole.pyi-1  core.pyi  core.pyi-1  decorators.pyi  decorators.pyi-1  exceptions.pyi  exceptions.pyi-1  formatting.pyi  globals.pyi  parser.pyi  termui.pyi  (+3 more)
_modules/: index.html
_modules/pyroclient/: client.html
_sources/: changelog.rst.txt  installing.rst.txt
_static/: documentation_options.js
_static/js/: custom.js
client/: .coveragerc  CONTRIBUTING.md  Makefile  README.md  deploy.sh  docker-compose.yml  mypy.ini  pyproject.toml  setup.py
client/.conda/: meta.yaml
client/docs/: requirements.txt
client/docs/source/: changelog.rst  client.rst  conf.py  index.rst  installing.rst
client/pyroclient/: __init__.py  client.py  exceptions.py  version.py
client/src/app/: main.py
client/test/: test_client.py
client/tests/: conftest.py  test_client.py  test_exceptions.py
docker/: compose.dev.yml  compose.prod.yml  compose.yml
docker/localstack/: setup-s3.sh
docs/source/: conf.py  index.rst  installing.rst  user.rst
nginx/: nginx.conf
scripts/: api_e2e.py  dbdiagram.txt  dump_db.sh  e2e_interactions.py  knock.py  pg_extract.sh  requirements.txt  test_e2e.py
scripts/localstack/: setup-s3.sh
src/: .coveragerc  Dockerfile  Dockerfile-dev  Dockerfile.test  Makefile  alembic.ini  manage.py  pytest.ini  requirements-dev.txt  requirements.txt  test-requirements.txt
src/alembic/: README.md  env.py
src/app/: config.py  db.py  deps.py  main.py  models.py  requirements.txt  security.py  utils.py
src/migrations/: README.md  env.py
src/pyronear/: settings.py  urls.py  wsgi.py
src/tests/: conf_test_db.py  conftest.py  db_utils.py  test_accesses.py  test_alerts.py  test_dependencies.py  test_deps.py  test_devices.py  test_events.py  test_external.py  test_headers.py  test_installations.py  test_login.py  test_main.py  test_media.py  test_medias.py  test_schemas.py  test_security.py  test_services.py  test_sites.py  test_time.py  test_users.py  utils.py
(+668 files in other folders)
