[project]
name = "pyro-api"
version = "0.1.2.dev0"
description = "Backend for wildfire prevention, detection and monitoring"
requires-python = ">=3.11,<3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "Pyronear", email = "contact@pyronear.org" }]
readme = "README.md"
keywords = ["docker", "fastapi", "postgres", "redis"]
dependencies = [
    "fastapi>=0.116.2,<1.0.0",
    "pydantic<2.12.0",  # cf. https://github.com/fastapi/sqlmodel/issues/1623
    "pydantic-settings>=2.0.0,<3.0.0",
    "uvicorn==0.35.0",
    "python-multipart>=0.0.20,<1.0.0",
    "python-magic>=0.4.17,<1.0.0",
    # DB
    "sqlmodel==0.0.31",
    "asyncpg>=0.30.0,<1.0.0",  # Postgres 17 support
    "alembic>=1.17.2,<2.0.0",
    "alembic-postgresql-enum>=1.8.0,<2.0.0",
    # Security
    "PyJWT[crypto]==2.10.1",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==5.0.0",
    # Services
    "boto3>=1.26.0,<2.0.0",
    "httpx>=0.24.0,<1.0.0",
    # Computation
    "geopy>=2.4.0,<3.0.0",
    "networkx>=3.2.0,<4.0.0",
    "numpy>=1.26.0,<2.0.0",
    "pandas>=2.2.0,<3.0.0",
    "pyproj>=3.6.0,<4.0.0",
    "shapely>=2.0.0,<3.0.0",
    # Production monitoring
    "sentry-sdk[fastapi]>=2.38.0,<3.0.0",
    "posthog>=3.0.0,<4.0.0",
    "prometheus-fastapi-instrumentator>=7.1.0,<8.0.0",
]

[dependency-groups]
quality = [
    "ruff==0.14.13",
    "ty==0.0.12",
    "prek==0.2.30",
    "types-requests>=2.0.0",
    "types-python-dateutil>=2.8.0",
    "sqlalchemy-stubs>=0.4",
    "types-passlib>=1.7.0",
]
test = [
    "pytest==8.3.5",
    "pytest-asyncio==0.21.2",
    "pytest-cov>=4.0.0,<5.0.0",
    "pytest-pretty>=1.0.0,<2.0.0",
    "httpx>=0.23.0",
    "aiosqlite>=0.16.0,<1.0.0",
]

[project.urls]
homepage = "https://pyronear.org"
repository = "https://github.com/pyronear/pyro-api"
documentation = "https://docs.pyronear.org"
issues = "https://github.com/pyronear/pyro-api/issues"
releasenotes = "https://github.com/pyronear/pyro-api/releases"
logo = "https://pyronear.org/static/images/logo.svg"



[tool.coverage.run]
source = ["src/app", "client/pyroclient"]

[tool.ruff]
line-length = 120
target-version = "py311"
preview = true

[tool.ruff.lint]
select = [
    "ERA",  # eradicate
    "FAST",  # FastAPI
    "YTT",  # flake8-2020
    "ANN",  # flake8-annotations
    "ASYNC",  # flake8-async
    "S",  # flake8-bandit
    "BLE",  # flake8-blind-except
    "B",  # flake8-bugbear
    "A",  # flake8-builtins
    "COM",  # flake8-commas
    "C4",  # flake8-comprehensions
    "CPY",  # flake8-copyright
    "DTZ",  # flake8-datetimez
    "T10",  # flake8-debugger
    "ISC",  # flake8-implicit-str-concat
    "ICN",  # flake8-import-conventions
    "LOG",  # flake8-logging
    "PIE",  # flake8-pie
    "T20",  # flake8-print
    "PYI",  # flake8-pyi
    "PT",  # flake8-pytest-style
    "Q",  # flake8-quotes
    "RET",  # flake8-return
    "SLF",  # flake8-self
    "SIM",  # flake8-simplify
    "ARG",  # flake8-unused-arguments
    "PTH",  # flake8-use-pathlib
    "FLY",  # flynt
    "I",  # isort
    "NPY",  # numpy
    "N",  # pep8-naming
    "PERF",  # perflint
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "DOC",  # pydoclint
    "D",  # pydocstyle
    "F",  # pyflakes
    "PGH",  # pygrep-hooks
    "PL",  # pylint
    "UP",  # pyupgrade
    "FURB",  # refurb
    "RUF",  # ruff specific
    "TRY",  # tryceratops
]
ignore = [
    "E501",  # line too long, handled by formatting
    "B904",  # raise from
    "F403",  # star imports
    "E731",  # lambda assignment
    "C416",  # list comprehension to list()
    "ANN002",  # missing type annotations on *args
    "ANN003",  # missing type annotations on **kwargs
    "COM812",  # trailing comma missing
    "ISC001",  # implicit string concatenation (handled by format)
    "PLR",  # Pylint refactor
    "TRY003",  # Avoid specifying long messages outside the exception class
    "D203",  # incorrect-blank-line-before-class
    "D213",  # multi-line-summary-second-line
    "D413",  # Missing blank line after last section
    "DOC502",  # Raised exception is not explicitly raised (not working with custom exceptions)
    "DOC501",  # Raised exception missing from docstring
    "D100",
]
exclude = [".git"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.lint.isort]
known-first-party = ["app", "tests", "pyroclient"]
known-third-party = ["fastapi"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["I001", "F401", "CPY001", "D104"]
"scripts/**.py" = ["D", "T201", "S101", "ANN", "RUF030"]
".github/**.py" = ["D", "T201", "ANN"]
"src/tests/**.py" = ["D103", "CPY001", "S101", "T201", "ANN001", "ANN201", "ANN202", "ARG001", "RUF030", "D", "DTZ003", "DTZ007", "ERA001"]
"src/migrations/versions/**.py" = ["CPY001"]
"src/migrations/**.py" = ["ANN", "ERA001", "D"]
"src/app/main.py" = ["ANN", "D103"]
"src/app/schemas/**.py" = ["A", "D101"]
"src/app/crud/**.py" = ["D101", "D107"]
"src/app/models.py" = ["A", "D100", "D101"]
"src/app/api/*/endpoints/**.py" = ["DOC201"]
"src/app/**.py" = ["D102", "D103", "D105", "D107"]
"client/docs/**.py" = ["E402", "D103", "ANN", "A001", "ARG001"]
"client/setup.py" = ["T201"]
"client/pyroclient/exceptions.py" = ["D"]
"client/pyroclient/client.py" = ["D107"]
"client/tests/**.py" = ["D103", "CPY001", "S101", "T201", "ANN", "ARG001", "RUF030"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.environment]
python-version = "3.11"
python-platform = "linux"
root = ["src", "client"]

[tool.ty.rules]
unresolved-import = "warn"
invalid-return-type = "warn"

[tool.ty.src]
include = ["src/app", "client/pyroclient"]
