[project]
name = "pyro-api"
version = "0.1.2.dev0"
description = "Backend for wildfire prevention, detection and monitoring"
authors = [{ name = "Pyronear", email = "contact@pyronear.org" }]
license = { text = "Apache-2.0" }
requires-python = ">=3.11,<4"
dependencies = []

[tool.uv]
package = false

[tool.uv.sources]
pyroclient = { path = "client", editable = true }
pyro-camera-api-client = { git = "https://github.com/pyronear/pyro-engine.git", subdirectory = "pyro_camera_api/client", rev = "6d525b150a764447e62beec26e39702f71d8461e" }

[dependency-groups]
server = [
    "fastapi>=0.136.3,<1.0.0",
    "sqlmodel>=0.0.38,<0.0.39",
    "pydantic>=2.0.0,<3.0.0",
    "pydantic-settings>=2.14.2,<3.0.0",
    "requests>=2.32.0,<3.0.0",
    "PyJWT>=2.12.0,<3.0.0",
    "bcrypt==5.0.0",
    "uvicorn>=0.11.1,<1.0.0",
    "asyncpg>=0.25.0,<1.0.0",
    "alembic>=1.8.1,<2.0.0",
    "sentry-sdk[fastapi]>=2.61.1,<3.0.0",
    "posthog>=3.0.0,<4.0.0",
    "prometheus-fastapi-instrumentator>=8.0.2,<9.0.0",
    "python-multipart==0.0.32",
    "python-magic>=0.4.17,<0.5.0",
    "boto3>=1.43.9,<1.44.0", # https://github.com/boto/boto3/issues/4435
    "httpx>=0.24.0,<1.0.0",
    "pyro-camera-api-client",
    "geopy>=2.4.0,<3.0.0",
    "networkx>=3.2.0,<4.0.0",
    "numpy>=2.4.6,<3.0.0",
    "pandas>=2.2.0,<3.0.0",
    "pyproj>=3.6.0,<4.0.0",
    "shapely>=2.0.0,<3.0.0",
    "timezonefinder>=8.0.0,<9.0.0",
    "pytz>=2024.1",
]
quality = [
    "ruff==0.15.21",
    "ty==0.0.59",
    "prek==0.4.9",
    "types-requests>=2.33.0.20260712",
    "types-python-dateutil>=2.9.0.20260716,<3.0.0",
    "sqlalchemy-stubs>=0.4,<0.5",
]
test = [
    "pytest==9.0.3",
    "pytest-asyncio==1.4.0",
    "pytest-cov>=7.1.0,<8.0.0",
    "pytest-pretty>=1.0.0,<2.0.0",
    "httpx>=0.23.0",
    "aiosqlite>=0.16.0,<1.0.0",
]
e2e = [
    "requests>=2.33.0,<3.0.0",
    "python-dotenv>=1.2.2,<2.0.0",
]
client = [
    "pyroclient",
]
client-test = [
    "pyroclient[test]",
    # Required by [tool.coverage.run] concurrency = ["greenlet"]; the client
    # group doesn't pull greenlet in transitively the way the backend does.
    "greenlet>=3.5.3,<4.0.0",
]
client-docs = [
    "pyroclient[docs]",
]

[tool.bandit.assert_used]
skips = ["*/test_*.py", "*_test.py"]

[tool.coverage.run]
source = ["src/app", "client/pyroclient"]
concurrency = ["greenlet"]

[tool.bandit]
exclude_dirs = ["src/tests", "client/tests"]
skips = ["B101"]

[tool.ruff]
line-length = 120
target-version = "py311"
preview = true

[tool.ruff.lint]
select = [
    "F",  # pyflakes
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "I",  # isort
    "N",  # pep8-naming
    # "D101", "D103",  # pydocstyle missing docstring in public function/class
    "D201","D202","D207","D208","D214","D215","D300","D301","D417", "D419",  # pydocstyle
    "YTT",  # flake8-2020
    "ANN",  # flake8-annotations
    "ASYNC",  # flake8-async
    "S",  # flake8-bandit
    "BLE",  # flake8-blind-except
    "B",  # flake8-bugbear
    "A",  # flake8-builtins
    "COM",  # flake8-commas
    "CPY",  # flake8-copyright
    "C4",  # flake8-comprehensions
    "T10",  # flake8-debugger
    "ISC",  # flake8-implicit-str-concat
    "ICN",  # flake8-import-conventions
    "LOG",  # flake8-logging
    "PIE",  # flake8-pie
    "T20",  # flake8-print
    "PYI",  # flake8-pyi
    "PT",  # flake8-pytest-style
    "Q",  # flake8-quotes
    "RSE",  # flake8-raise
    "RET",  # flake8-return
    "SIM",  # flake8-simplify
    "ARG",  # flake8-unused-arguments
    "PTH",  # flake8-use-pathlib
    "PERF",  # perflint
    "NPY",  # numpy
    "FAST",  # fastapi
    "FURB",  # refurb
    "RUF",  # ruff specific
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "B904",  # raise from
    "C901",  # too complex
    "F403",  # star imports
    "E731",  # lambda assignment
    "C416",  # list comprehension to list()
    "ANN002",  # missing type annotations on *args
    "ANN003",  # missing type annotations on **kwargs
    "COM812",  # trailing comma missing
    "ISC001",  # implicit string concatenation (handled by format)
    "FAST002",  # fastapi annotated
]
exclude = [".git"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.lint.isort]
known-first-party = ["app", "tests", "pyroclient"]
known-third-party = ["fastapi"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["I001", "F401", "CPY001"]
"scripts/**.py" = ["D", "T201", "S101", "ANN", "RUF030"]
".github/**.py" = ["D", "T201", "ANN"]
"src/tests/**.py" = ["D103", "CPY001", "S101", "T201", "ANN001", "ANN201", "ANN202", "ARG001", "RUF030"]
"src/app/api/api_v1/endpoints/camera_proxy.py" = ["ANN401"]
"src/migrations/versions/**.py" = ["CPY001"]
"src/migrations/**.py" = ["ANN"]
"src/app/main.py" = ["ANN"]
"src/app/schemas/**.py" = ["A"]
"src/app/models.py" = ["A"]
"client/docs/**.py" = ["E402", "D103", "ANN", "A001", "ARG001"]
"client/setup.py" = ["T201"]
"client/tests/**.py" = ["D103", "CPY001", "S101", "T201", "ANN", "ARG001", "RUF030"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.environment]
python-version = "3.11"
python-platform = "linux"
root = ["src", "client"]

[tool.ty.rules]
unresolved-import = "warn"
