[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyroclient"
description = "Python Client for Pyronear wildfire alert API"
authors = [
    {name = "Pyronear", email = "contact@pyronear.org"}
]
readme = "README.md"
requires-python = ">=3.8,<4"
license = {file = "LICENSE"}
keywords = ["backend", "wildfire", "alert", "client", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = ["version"]
dependencies = [
    "requests>=2.31.0,<3.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=5.3.2",
    "coverage[toml]>=4.5.4",
]
quality = [
    "ruff>=0.0.273,<1.0.0",
    "mypy==1.4.1",
    "black==23.3.0",
]
docs = [
    "sphinx>=3.0.0,!=3.5.0",
    "sphinxemoji>=0.1.8",
    "sphinx-copybutton>=0.3.1",
    "docutils<0.18",
    # cf. https://github.com/readthedocs/readthedocs.org/issues/9038
    "Jinja2<3.1",
    "furo>=2022.3.4",
]
dev = [
    # test
    "pytest>=5.3.2",
    "coverage[toml]>=4.5.4",
    # style
    "ruff>=0.0.273,<1.0.0",
    "mypy==1.4.1",
    "black==23.3.0",
    # docs
    "sphinx>=3.0.0,!=3.5.0",
    "sphinxemoji>=0.1.8",
    "sphinx-copybutton>=0.3.1",
    "docutils<0.18",
    "Jinja2<3.1",
    "furo>=2022.3.4",
]

[project.urls]
documentation = "https://pyronear.org/pyro-api"
repository = "https://github.com/pyronear/pyro-api/client"
tracker = "https://github.com/pyronear/pyro-api/issues"

[tool.setuptools]
zip-safe = true

[tool.setuptools.packages.find]
exclude = ["docs*", "tests*"]

[tool.mypy]
files = "pyroclient/"
show_error_codes = true
pretty = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
check_untyped_defs = true
implicit_reexport = false

[[tool.mypy.overrides]]
module = [
    "requests.*",
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["pyroclient/"]

[tool.black]
line-length = 120
target-version = ['py38']
