[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[project]
name = "pyroclient"
version = "0.2.0.dev0"
description = "Python Client for Pyronear wildfire alert API"
authors = [
    {name = "Pyronear", email = "contact@pyronear.org"}
]
readme = "README.md"
requires-python = ">=3.10,<4"
license = {file = "LICENSE"}
keywords = ["backend", "wildfire", "alert", "client", "api"]
classifiers = [
    # https://pypi.org/classifiers/
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.31.0,<3.0.0",
]

[project.optional-dependencies]
test = [
    "pytest==8.3.5",
    "pytest-cov>=4.0.0,<5.0.0",
    "pytest-pretty>=1.0.0,<2.0.0",
    "types-requests>=2.0.0",
]
docs = [
    "sphinx>=3.0.0,!=3.5.0",
    "sphinxemoji>=0.1.8",
    "sphinx-copybutton>=0.3.1",
    "docutils<0.18",
    # cf. https://github.com/readthedocs/readthedocs.org/issues/9038
    "Jinja2<3.1",
    "furo>=2022.3.4",
]

[project.urls]
documentation = "https://pyronear.org/pyro-api"
repository = "https://github.com/pyronear/pyro-api/client"
tracker = "https://github.com/pyronear/pyro-api/issues"

[tool.uv.build-backend]
module-name = "pyroclient"
module-root = ""

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[tool.pytest.ini_options]
testpaths = ["tests/"]
addopts = "--cov=pyroclient"
