[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyroclient"
description = "Python Client for Pyronear wildfire alert API"
authors = [
    {name = "Pyronear", email = "contact@pyronear.org"}
]
readme = "README.md"
requires-python = ">=3.10,<4"
license = {file = "LICENSE"}
keywords = ["backend", "wildfire", "alert", "client", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = ["version"]
dependencies = [
    "requests>=2.33.0,<3.0.0",
]

[project.optional-dependencies]
test = [
    "pytest==9.0.3",
    "pytest-cov>=7.1.0,<8.0.0",
    "pytest-pretty>=1.0.0,<2.0.0",
    "types-requests>=2.0.0",
]
docs = [
    "sphinx>=3.0.0,!=3.5.0",
    "sphinxemoji>=0.1.8",
    "sphinx-copybutton>=0.3.1",
    "docutils<0.18",
    # cf. https://github.com/readthedocs/readthedocs.org/issues/9038
    "Jinja2<3.1",
    "furo>=2022.3.4",
]

[project.urls]
documentation = "https://pyronear.org/pyro-api"
repository = "https://github.com/pyronear/pyro-api/client"
tracker = "https://github.com/pyronear/pyro-api/issues"

[tool.setuptools]
zip-safe = true

[tool.setuptools.packages.find]
exclude = ["docs*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["pyroclient/"]
